# crypto-predictor

./: .envrc  .gitignore  Makefile  README.md  mise.toml  pyproject.toml  settings.env  toolsscript.sh
.devcontainer/: devcontainer.json  postCreateCommand.sh
Docker/: candles.dockerfile  trades.dockerfile
deployments/dev/: .env.local
deployments/dev/candles/: candles.yaml
deployments/dev/kind/: kind-with-portmapping.yaml
deployments/dev/kind/manifests/: kafka-ui-all-in-one.yaml
deployments/prod/: kustomization.yaml
deployments/prod/agnhost/: ks.yaml
deployments/prod/agnhost/app/: agnhost-d.yaml  agnhost-ig.yaml  agnhost-svc.yaml  kustomization.yaml  rwml-ia.yaml  rwml-ip.yaml  rwml-ir.yaml
deployments/prod/candles/: candles.yaml
deployments/prod/trades/: trades.yaml
lessons/: 00_how_to_setup_your_development_environment.md  01_create_local_kubernetes_cluster.md  session_1.md  session_2.md  session_3.md
services/candles/: pyproject.toml  settings.env
services/candles/src/candles/: config.py  main.py
src/trades/: config.py  kraken_api.py  main.py
