[project]

name = "crypto-predictor-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "candles",
    "jsonschema-specifications>=2024.10.1",
    "loguru>=0.7.3",
    "quixstreams>=3.13.1",
    "trades",
    "websocket-client>=1.8.0",
]

[tool.uv.workspace]
members = [
    "services/trades",
    "services/candles",
]

[tool.uv.sources]
trades = { workspace = true }
candles = { workspace = true }

[tool.ruff]
line-length=100
lint.select=[
    "C", #mccabe rules
    "E", # pycodestyle (error)
    "F", # pyflakes
    "W", #pycode style warning rules
    "B", # bugbear
    "I", # isort 
]
lint.ignore=[
    "C901", # max complexity to 10
    "E501", ## Leave it to the formatter to split long lines
    ]

[tool.ruff.format]
indent-style="space"
quote-style="single"
